- attemped fix for overflow-y

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ a{
 }
 body{
     overflow-x: hidden;
+    overflow-y: hidden;
     position: relative;
 }
 #rocket{
